# chainparser

./: Cargo.toml  LICENSE  Makefile  README.md  release.toml  rustfmt.toml
.github/workflows/: build-test-lint.yml
src/: api.rs  de.rs  errors.rs  lib.rs  traits.rs
src/deserializer/: borsh.rs  floats.rs  mod.rs  spl.rs
src/discriminator/: match_discriminator.rs  mod.rs
src/idl/: idl_address.rs  idl_provider.rs  idl_retriever.rs  mod.rs
src/idl/encoder/: idl_decoder.rs  idl_encoder.rs  mod.rs
src/ixs/: accounts_mapper.rs  discriminator.rs  instruction_mapper.rs  mod.rs
src/json/: discriminator.rs  json_accounts_deserializer.rs  json_common.rs  json_idl_enum_variant_de.rs  json_idl_field_de.rs  json_idl_type_de.rs  json_idl_type_def_de.rs  json_serialization_opts.rs  mod.rs
tests/: deserialize_account.rs
tests/utils/: deserialization.rs  mod.rs
