[package]
name = "chainparser"
description = "Parses Solana account data using provided IDL"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/thlorenz/chainparser"
readme = "README.md"
license = "MIT"

[dependencies]
arrayref = "0.3.7"
borsh = "0.9.3"
flate2 = "1.0.28"
heck = "0.5.0"
lazy_static = "1.5.0"
log = "0.4.21"
serde = "1.0.197"
serde_json = "1.0.117"
solana-sdk = "1.18.4"
solana_idl = "0.1.0"
thiserror = "1.0.57"

[dev-dependencies]
base64 = "0.22.0"
